# MyQtDemos

./: README.md
ForLoops/: CMakeLists.txt  main.cpp
HelloWorld/: CMakeLists.txt  main.cpp
Keyword-Static-Demo/: CMakeLists.txt  CTest.cpp  CTest.h  main.cpp
MatrixMultiplication/: CMakeLists.txt  main.cpp
keword-StaticDemo/: ctest.cpp  ctest.h  main.cpp
